--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="#"> <!-- о чем проект -->
-    <meta name="keywords" content="#"> <!-- ключевые слова -->
+    <meta name="description" content="Реклама велосипедов, тренировки">
+    <meta name="keywords" content="велосипед, шоссе, бездорожье, велотренировки">
     <meta name="author" content="Stalkiv87">
-    <link rel="shortcut icon" href="#" type="#"> <!-- фавикон -->
+    <link rel="shortcut icon" href="./images/sun-dark.svg" type="image/svg">
     <link rel="stylesheet" href="styles/index.css">
     <title>Bicycles</title>
 </head>
@@ -71,7 +71,7 @@
             </div>
         </div>
 
-        <!-- <div class="slider__item">
+        <div class="slider__item">
             <h2 class="slider__title">Грэвел</h2>
             <p class="slider__paragraph">Грэвел похож на шоссейный велосипед, но конструкция рамы немного отличается, и на нём стоят более широкие покрышки, всё для того, чтобы проехать по лёгкому бездорожью.</p>
             <div class="slider__container">
@@ -99,7 +99,7 @@
                 <button class="slider__button slider__button_type_previous" type="button"></button>
                 <button class="slider__button slider__button_type_next" type="button"></button>
             </div>
-        </div> -->
+        </div>
     </section>
 
     <section class="bikes" id="bikes">
@@ -142,13 +142,14 @@
             <a class="bikes__gallery-item" href="https://www.sigmasports.com/item/Cannondale/SystemSix-HiMOD-Ultegra-Di2-Disc-Road-Bike-2021/R82J" target="_blank">
                 <img src="./images/cannondale_systemsix_himod.jpg" class="bikes__photo" alt="Велосипед Cannondale Systemsix Himod">
                 <p class="bikes__capture">Cannondale Systemsix Himod</p>
+            </a>
             <a class="bikes__gallery-item" href="https://www.sigmasports.com/item/Trek/Domane-SL-7-Force-eTap-AXS-Disc-Road-Bike-2021/RULF" target="_blank">
                 <img src="./images/trek_domane_sl-7.jpg" class="bikes__photo" alt="Велосипед Trek Domane SL-7">
                 <p class="bikes__capture">Trek Domane SL-7</p>
             </a>
         </div>
 
-         <!-- <div class="bikes__gallery">
+        <div class="bikes__gallery">
             <a class="bikes__gallery-item bikes__gallery-item_mobile_visible" href="https://www.sigmasports.com/item/Cervelo/Aspero-GRX-810-1x-Disc-Gravel-Bike-2021/RJDE" target="_blank">
                 <img src="./images/cervelo_aspero_grx_810.jpg" class="bikes__photo" alt="Велосипед Cervelo Aspero GRX 810">
                 <p class="bikes__capture">Cervelo Aspero GRX 810</p>
@@ -176,7 +177,7 @@
                 <img src="./images/cervelo_p-series.jpg" class="bikes__photo" alt="Велосипед Cervelo P-Series">
                 <p class="bikes__capture">Cervelo P-Series</p>
             </a>
-        </div> -->
+        </div>
         <div class="bikes__slider-dots">
             <span class="bikes__slider-dot bikes__slider-dot_type_active"></span>
             <span class="bikes__slider-dot"></span>
