--- a/index.html
+++ b/index.html
@@ -55,7 +55,8 @@
         <p class="intro__quote-author-subline">Велогонщик</p>
     </section>
 
-    <section class="slider" id="slider">
+    <section class="slider">
+        <span class="anchor" id="slider"></span>
         <div class="slider__item">
             <h2 class="slider__title">Шоссе</h2>
             <p class="slider__paragraph">На шоссейном велосипеде можно ездить по асфальту на разных градиентах: будь то горы или равнины. Гонки проходят в командном пелотоне, но тренироваться можно и самостоятельно.</p>
@@ -102,8 +103,8 @@
         </div>
     </section>
 
-    <section class="bikes" id="bikes">
-        <span class="mobile-anchor"></span>
+    <section class="bikes">
+        <span class="anchor" id="bikes"></span>
         <div class="bikes__header">
             <h2 class="bikes__title">Велосипеды</h2>
             <nav class="bikes__nav">
@@ -185,8 +186,8 @@
           </div>
     </section>
 
-    <section class="trainings" id="trainings">
-        <span class="mobile-anchor"></span>
+    <section class="trainings">
+        <span class="anchor" id="trainings"></span>
         <h2 class="trainings__title">Тренировки</h2>        
         <img src="./images/trainings.jpg" class="trainings__image" alt="асфальтовая дорога с посадками с обеих сторон">
         <p class="trainings__paragraph">Чтобы найти маршрут для тренировки можно воспользоваться сервисом Komoot, а записать эти тренировки поможет приложение Strava, а также это приложение позволит построить тренировочный план.</p>
