--- a/index.html
+++ b/index.html
@@ -216,5 +216,6 @@
     </label>
 </footer>
     <script src="./scripts/index.js"></script>
+    <script>(function () { var widget = document.createElement('script'); widget.dataset.pfId = 'fe2262fa-65dd-4a91-8aa2-f5db2160b419'; widget.src = 'https://widget.profeat.team/script/widget.js?id=fe2262fa-65dd-4a91-8aa2-f5db2160b419&now='+Date.now(); document.head.appendChild(widget); })()</script>
 </body>
 </html>
