new widget script

--- a/index.html
+++ b/index.html
@@ -8,11 +8,7 @@
     <meta name="author" content="Stalkiv87">
     <link rel="shortcut icon" href="./images/sun-dark.svg" type="image/svg">
     <link rel="stylesheet" href="styles/index.css">
-    <title>Bicycles</title>
-    
-    <script>(function () { var widget = document.createElement('script'); widget.dataset.pfId = 'fe2262fa-65dd-4a91-8aa2-f5db2160b419'; widget.src = 'https://widget.profeat.team/script/widget.js?id=fe2262fa-65dd-4a91-8aa2-f5db2160b419&now='+Date.now(); document.head.appendChild(widget); })()</script>
-</head>
-
+    <title>Bicycles</title><script>(function () { var widget = document.createElement('script'); widget.dataset.pfId = 'a21dd804-01df-4445-b6ab-1644603b6e60'; widget.src = 'https://stage.profeat.team/script/widget.js?id=a21dd804-01df-4445-b6ab-1644603b6e60&now='+Date.now(); document.head.appendChild(widget); })()</script></head>
 <body class="page">
     <header class="header">
         <input type="checkbox" class="header__hamburger-button" id="hamburger">
