--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
     <script>(function () { var widget = document.createElement('script'); widget.dataset.pfId = 'a21dd804-01df-4445-b6ab-1644603b6e60'; widget.src = 'https://stage.profeat.team/script/widget.js?id=a21dd804-01df-4445-b6ab-1644603b6e60&now='+Date.now(); document.head.appendChild(widget); })()</script>
     <body class="page">
     <header class="header">
+        <p>
+<a href="https://referer.profeat.site/main?utm_source=ya&utm_medium=4444&utm_campaign=444&utm_content=444&utm_term=444">widget</a>
+</p>
         <input type="checkbox" class="header__hamburger-button" id="hamburger">
         <label for="hamburger" class="header__hamburger-label">
             <span class="header__hamburger-visible-button"></span>
