--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <body class="page">
     <header class="header">
         <p>
-<a href="https://referer.profeat.site/main?utm_source=ya&utm_medium=4444&utm_campaign=444&utm_content=444&utm_term=444">widget</a>
+<a href="https://referer.profeat.site/main?utm_source=ya&utm_medium=4444&utm_campaign=444&utm_content=444&utm_term=444">Перейди сюда чтобы проверить и refer</a>
 </p>
         <input type="checkbox" class="header__hamburger-button" id="hamburger">
         <label for="hamburger" class="header__hamburger-label">
@@ -43,6 +43,7 @@
         <img src="./images/forest.jpg" class="first-screen__image" alt="дорога в горном лесу">
         <p class="first-screen__paragraph">Триатлонные старты, горные серпантины или грейвел заезды по&nbsp;живописным маршрутам&nbsp;&mdash; нужно только определиться с&nbsp;выбором велосипеда и&nbsp;отправиться в&nbsp;путь.</p>
         <a class="first-screen__button" href="#slider">Подробнее</a>
+        <a class="first-screen__button" href="https://referer.profeat.site/main?utm_source=ya&utm_medium=4444&utm_campaign=444&utm_content=444&utm_term=444">Проверить refer</a>
         <p class="first-screen__capture">Cannondale Systemsix</p>
         <div class="first-screen__container">
             <div class="first-screen__bike-fix"></div>
