--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
         <img src="./images/forest.jpg" class="first-screen__image" alt="дорога в горном лесу">
         <p class="first-screen__paragraph">Триатлонные старты, горные серпантины или грейвел заезды по&nbsp;живописным маршрутам&nbsp;&mdash; нужно только определиться с&nbsp;выбором велосипеда и&nbsp;отправиться в&nbsp;путь.</p>
         <a class="first-screen__button" href="#slider">Подробнее</a>
-        <a class="first-screen__button" href="https://referer.profeat.site/main?utm_source=ya&utm_medium=4444&utm_campaign=444&utm_content=444&utm_term=444">Проверить refer</a>
+        <p class="first-screen__button" href="https://referer.profeat.site/main?utm_source=ya&utm_medium=4444&utm_campaign=444&utm_content=444&utm_term=444">Проверить refer</p>
         <p class="first-screen__capture">Cannondale Systemsix</p>
         <div class="first-screen__container">
             <div class="first-screen__bike-fix"></div>
