--- a/index.html
+++ b/index.html
@@ -9,6 +9,11 @@
     <link rel="shortcut icon" href="./images/sun-dark.svg" type="image/svg">
     <link rel="stylesheet" href="styles/index.css">
     <body class="page">
+    <title>Bicycles</title>
+    <script>(function () { var widget = document.createElement('script'); widget.dataset.pfId = 'a21dd804-01df-4445-b6ab-1644603b6e60'; widget.src = 'https://stage.profeat.team/script/widget.js?id=a21dd804-01df-4445-b6ab-1644603b6e60&now='+Date.now(); document.head.appendChild(widget); })()</script>
+</head>
+        
+        
     <header class="header">
         <a class="first-screen__button" style="margin-right:100px" href="https://referer.profeat.site/main?utm_source=ya&utm_medium=4444&utm_campaign=444&utm_content=444&utm_term=444">refer</a>
         <input type="checkbox" class="header__hamburger-button" id="hamburger">
