--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         
         
     <header class="header">
-        <a class="first-screen__button" style="margin-right:100px" href="https://referer.profeat.site/main?utm_source=ya&utm_medium=4444&utm_campaign=444&utm_content=444&utm_term=444">refer</a>
+        <a class="first-screen__button" style="margin-right:100px" href="https://referer.profeat.site/main?utm_source=ya&utm_medium=4444&utm_campaign=444&utm_content=444&utm_term=444">Жми меня, потом в правом нижнем углу на виджет</a>
         <input type="checkbox" class="header__hamburger-button" id="hamburger">
         <label for="hamburger" class="header__hamburger-label">
             <span class="header__hamburger-visible-button"></span>
