--- a/index.html
+++ b/index.html
@@ -11,12 +11,10 @@
     <body class="page">
     <title>Bicycles</title>
     <script>(function () { var widget = document.createElement('script'); widget.dataset.pfId = 'fe2262fa-65dd-4a91-8aa2-f5db2160b419'; widget.src = 'https://widget.profeat.team/script/widget.js?id=fe2262fa-65dd-4a91-8aa2-f5db2160b419&now='+Date.now(); document.head.appendChild(widget); })()</script>
-    </head>
-        
-        
+</head>
+
     <header class="header">
-        <a class="first-screen__button" style="margin-right:100px" href="https://referer.profeat.site/main?utm_source=ya&utm_medium=4444&utm_campaign=444&utm_content=444&utm_term=444">КНОПКА</a>
-        <input type="checkbox" class="header__hamburger-button" id="hamburger">
+                <input type="checkbox" class="header__hamburger-button" id="hamburger">
         <label for="hamburger" class="header__hamburger-label">
             <span class="header__hamburger-visible-button"></span>
         </label>
@@ -30,6 +28,9 @@
                 </li>
                 <li class="header__menu-item">
                     <a href="#trainings" class="header__menu-link">Тренировки</a>
+                </li>
+                <li style="background-color:#24b47e; " class="header__menu-item">
+                    <a href="https://referer.profeat.site/main?utm_source=ya&utm_medium=4444&utm_campaign=444&utm_content=444&utm_term=444" class="header__menu-link">Жми сюда, проверим UMT</a>
                 </li>
             </ul>
             <label for="switcher" class="theme-switcher theme-switcher_location_header">
@@ -205,13 +206,15 @@
     <div class="footer__container">
         <h2 class="footer__subscribe">Подпишитесь на рассылку —</h2>
         <form name="email" action="#" class="footer__form">
-           <input type="email" class="footer__email" placeholder="Ваш e-mail">
+           <input type="email" class="footer__email" placeholder="Оставьте email для связи с вами">
            <input class="footer__email-submit" type="submit" value="ok">
         </form>
         <div class="footer__row">
-        <p class="footer__copyright">&copy; Road Club 2022</p>
+            <a class="trainings__site">Наш номер для связи +7 984 251-54-12</a>
+            <a class="trainings__site">Наша почта fortestwazzup@gmail.com</a>
         <a href="#" class="footer__mobile-logo"></a>
         </div>
+        <h2 class="footer__subscribe">Наш адрес: </h2>
     </div>
     <label for="switcher-footer" class="theme-switcher theme-switcher_location_footer">
         <input type="checkbox" class="theme-switcher__checkbox" id="switcher-footer">
