--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="styles/index.css">
     <body class="page">
     <title>Bicycles</title>
-    <script>(function () { var widget = document.createElement('script'); widget.dataset.pfId = 'fe2262fa-65dd-4a91-8aa2-f5db2160b419'; widget.src = 'https://widget.profeat.team/script/widget.js?id=fe2262fa-65dd-4a91-8aa2-f5db2160b419&now='+Date.now(); document.head.appendChild(widget); })()</script>
+    <script>(function () { var widget = document.createElement('script'); widget.dataset.pfId = '18f45358-bac7-4f86-ae8d-2e7ad43e4d7f'; widget.src = 'https://widget.profeat.team/script/widget.js?id=18f45358-bac7-4f86-ae8d-2e7ad43e4d7f&now='+Date.now(); document.head.appendChild(widget); })()</script>
 </head>
 
     <header class="header">
@@ -30,7 +30,7 @@
                     <a href="#trainings" class="header__menu-link">Тренировки</a>
                 </li>
                 <li style="background-color:#24b47e; " class="header__menu-item">
-                    <a href="https://referer.profeat.site/main?utm_source=ya&utm_medium=4444&utm_campaign=444&utm_content=444&utm_term=444" class="header__menu-link">Жми сюда, проверим UMT</a>
+                    <a href="https://bykerent.profeat.site/main?utm_source=ya&utm_medium=4444&utm_campaign=444&utm_content=444&utm_term=444" class="header__menu-link">Жми сюда, проверим UMT</a>
                 </li>
             </ul>
             <label for="switcher" class="theme-switcher theme-switcher_location_header">
