--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="styles/index.css">
     <body class="page">
     <title>Bicycles</title>
-    <script>(function () { var widget = document.createElement('script'); widget.dataset.pfId = '18f45358-bac7-4f86-ae8d-2e7ad43e4d7f'; widget.src = 'https://widget.profeat.team/script/widget.js?id=18f45358-bac7-4f86-ae8d-2e7ad43e4d7f&now='+Date.now(); document.head.appendChild(widget); })()</script>
+    <script>(function () { var widget = document.createElement('script'); widget.dataset.pfId = 'bf721e75-d8a5-49a7-ab5e-8158cfba6b44'; widget.src = 'https://stage.profeat.team/script/widget.js?id=bf721e75-d8a5-49a7-ab5e-8158cfba6b44&now='+Date.now(); document.head.appendChild(widget); })()</script>    
 </head>
 
     <header class="header">
@@ -222,15 +222,5 @@
     </label>
 </footer>
     <script src="./scripts/index.js"></script>
-    <!-- Roistat Counter Start -->
-<script>
-(function(w, d, s, h, id) {
-    w.roistatProjectId = id; w.roistatHost = h;
-    var p = d.location.protocol == "https:" ? "https://" : "http://";
-    var u = /^.*roistat_visit=[^;]+(.*)?$/.test(d.cookie) ? "/dist/module.js" : "/api/site/1.0/"+id+"/init?referrer="+encodeURIComponent(d.location.href);
-    var js = d.createElement(s); js.charset="UTF-8"; js.async = 1; js.src = p+h+u; var js2 = d.getElementsByTagName(s)[0]; js2.parentNode.insertBefore(js, js2);
-})(window, document, 'script', 'cloud.roistat.com', 'adb62fbb5f11a9b0fe6a5b02a90dcf2f');
-</script>
-<!-- Roistat Counter End -->
 </body>
 </html>
