--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
     <body class="page">
     <title>Bicycles</title>
 <script>(function () { var widget = document.createElement('script'); widget.dataset.pfId = 'fe2262fa-65dd-4a91-8aa2-f5db2160b419'; widget.src = 'https://widget.profeat.team/script/widget.js?id=fe2262fa-65dd-4a91-8aa2-f5db2160b419&now='+Date.now(); document.head.appendChild(widget); })()</script>
-</head>
 
+</head>
     <header class="header">
                 <input type="checkbox" class="header__hamburger-button" id="hamburger">
         <label for="hamburger" class="header__hamburger-label">
@@ -30,7 +30,7 @@
                     <a href="#trainings" class="header__menu-link">Тренировки</a>
                 </li>
                 <li style="background-color:#24b47e; " class="header__menu-item">
-                    <a href="https://bykerent.profeat.site/main?utm_source=ya&utm_medium=4444&utm_campaign=444&utm_content=444&utm_term=444" class="header__menu-link">Жми сюда, проверим UMT</a>
+                    <a href="https://bykerent.profeat.site/main?utm_source=ya&utm_medium=4444&utm_campaign=444&utm_content=444&utm_term=444" class="header__menu-link">Жми сюда - проверим UMT</a>
                 </li>
             </ul>
             <label for="switcher" class="theme-switcher theme-switcher_location_header">
