--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="styles/index.css">
     <body class="page">
     <title>Bicycles</title>
-<script>(function () { var widget = document.createElement('script'); widget.dataset.pfId = 'fe2262fa-65dd-4a91-8aa2-f5db2160b419'; widget.src = 'https://widget.profeat.team/script/widget.js?id=fe2262fa-65dd-4a91-8aa2-f5db2160b419&now='+Date.now(); document.head.appendChild(widget); })()</script>
+    <script>(function () { var widget = document.createElement('script'); widget.dataset.pfId = 'bf721e75-d8a5-49a7-ab5e-8158cfba6b44'; widget.src = 'https://stage.profeat.team/script/widget.js?id=bf721e75-d8a5-49a7-ab5e-8158cfba6b44&now='+Date.now(); document.head.appendChild(widget); })()</script>
 
 </head>
     <header class="header">
