--- a/index.html
+++ b/index.html
@@ -210,8 +210,8 @@
            <input class="footer__email-submit" type="submit" value="ok">
         </form>
         <div class="footer__row">
-            <a class="trainings__site">Наш номер для связи +7 984 251-54-12</a>
-            <a class="trainings__site">Наша почта fortestwazzup@gmail.com</a>
+            <a class="trainings__site">Наш номер для связи +7 920 367-20-13</a>
+            <a class="trainings__site">Наша почта stalkiv87@yandex.ru</a>
         <a href="#" class="footer__mobile-logo"></a>
         </div>
         <h2 class="footer__subscribe">Наш адрес: </h2>
